'仅仅完成文稿上传的整个流程'

--- a/web/css/accountCss.css
+++ b/web/css/accountCss.css
@@ -9,5 +9,11 @@
 }
 
 .ibasPanelSize {
-    width : 400px;
+    width : 480px;
+}
+
+@media screen and (max-width:500px){
+    .ibasPanelSize {
+        width : 100%;
+    }
 }
