--- a/web/css/ibasLB.css
+++ b/web/css/ibasLB.css
@@ -5,9 +5,10 @@
 }
 
 .ibas-label-div {
-	margin : 2px;
+	margin : 4px;
 	padding : 4px;
-	border : 1px dashed;
+	border : 1px;
+	border-style : dashed;
 	width : 100%;
 	height : auto;
 	border-radius : 6px;
@@ -17,7 +18,7 @@
 .ibas-label-label {
 	background: #e4f1ec;
     border: #e4f1ec 1px;
-    padding: 4px;
+    padding: 2px;
     margin: 2px 0px 2px 2px;
     float: left;
     box-sizing: border-box;
@@ -46,6 +47,7 @@
 
 .ibas-label-cdiv {
 	float : left;
+	padding : 2px;
 }
 
 .ibas-IL-warn {
@@ -58,9 +60,6 @@
 
 @keyframes ibas-IL-warn-ani {
 	0% {
-		background: rgb(217, 232, 245);
-	}
-	50% {
 		background: rgb(74, 91, 128);
 	} 
 	100% {
@@ -70,9 +69,6 @@
 
 @-moz-keyframes ibas-IL-warn-ani {
 	0% {
-		background: rgb(217, 232, 245);
-	}
-	50% {
 		background: rgb(74, 91, 128);
 	}
 	100% {
@@ -82,9 +78,6 @@
 
 @-webkit-keyframes ibas-IL-warn-ani {
 	0% {
-		background: rgb(217, 232, 245);
-	}
-	50% {
 		background: rgb(74, 91, 128);
 	}
 	100% {
@@ -94,9 +87,6 @@
 
 @-o-keyframes ibas-IL-warn-ani {
 	0% {
-		background: rgb(217, 232, 245);
-	}
-	50% {
 		background: rgb(74, 91, 128);
 	}
 	100% {
@@ -106,9 +96,6 @@
 
 @-ms-keyframes ibas-IL-warn-ani {
 	0% {
-		background: rgb(217, 232, 245);
-	}
-	50% {
 		background: rgb(74, 91, 128);
 	}
 	100% {
