--- a/src-android/MailIM/app/src/main/res/layout/activity_main.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mailim.mailim.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <LinearLayout
         android:id="@+id/ly_tab_menu"
