--- a/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
@@ -2,19 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/list_item_email_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"/>
     <TextView
-        android:id="@+id/tv_list_email"
+        android:id="@+id/tv_list_email_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:paddingLeft="15dp"
-        android:layout_marginLeft="20dp"
         android:textSize="18sp"
-        android:hint="item布局"/>
+        android:text="用户名"/>
+    <TextView
+        android:id="@+id/tv_list_email_subject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_list_email_from"
+        android:textColor="@color/text_gray"
+        android:textSize="12sp"
+        android:hint="主题"/>
 </RelativeLayout>
