--- a/src-android/MailIM/app/src/main/res/layout/fragment_home.xml
+++ b/src-android/MailIM/app/src/main/res/layout/fragment_home.xml
@@ -64,6 +64,16 @@
                 android:text="设置"/>
         </LinearLayout>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
+            android:background="#3C8DC4"
+            android:onClick="onTest"
+            android:text="测试"/>
     </LinearLayout>
 
 </LinearLayout>
