--- a/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp">
     <TextView
         android:id="@+id/tv_list_email_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="20dp"
         android:text="用户名"/>
     <TextView
         android:id="@+id/tv_list_email_subject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_list_email_from"
+        android:layout_marginTop="5dp"
         android:textColor="@color/text_gray"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:hint="主题"/>
 </RelativeLayout>
