--- a/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_email.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:padding="10dp">
     <TextView
         android:id="@+id/tv_list_email_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="24dp"
         android:text="用户名"/>
     <TextView
         android:id="@+id/tv_list_email_subject"
@@ -16,6 +16,6 @@
         android:layout_below="@+id/tv_list_email_from"
         android:layout_marginTop="5dp"
         android:textColor="@color/text_gray"
-        android:textSize="12dp"
+        android:textSize="15dp"
         android:hint="主题"/>
 </RelativeLayout>
