--- a/src-android/MailIM/app/src/main/res/layout/activity_chat.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_chat.xml
@@ -4,34 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/chat_title_layout"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:background="@color/title">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textColor="@color/title_text"
-            android:textSize="24dp"
-            android:text="名称"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-    </LinearLayout>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_title_layout"
         android:layout_above="@+id/chat_below_layout"
+        android:layout_alignParentTop="true"
         android:divider="@null"
-        android:background="@color/fragment_lv_bg"
+        android:background="#ddd"
         android:id="@+id/lv_chat">
 
     </ListView>
@@ -42,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-
+    `<!--
         <Button
             android:id="@+id/btn_left"
             android:layout_width="wrap_content"
@@ -50,6 +29,7 @@
             android:layout_margin="5dp"
             android:text="左边"
             android:textColor="#fff" />
+            -->
 
         <EditText
             android:id="@+id/et_meg"
@@ -62,7 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:text="右边"
+            android:background="#1e1"
+            android:text="发送"
             android:textColor="#fff" />
 
     </LinearLayout>
