--- a/src-android/MailIM/app/src/main/res/layout/activity_email.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_email.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="10dp"
     tools:context="mailim.mailim.activity.EmailActivity">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/email_btn_send"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -74,24 +71,27 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#E6E6E6"/>
-        <RelativeLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/email_text_des"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="内容："/>
-            <WebView
-                android:id="@+id/email_text"
-                android:layout_below="@+id/email_text_des"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </RelativeLayout>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/email_text_des"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="内容："/>
+                <WebView
+                    android:id="@+id/email_text"
+                    android:layout_below="@+id/email_text_des"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+        </ScrollView>
     </LinearLayout>
-</ScrollView>
     <Button
         android:id="@+id/email_btn_send"
         android:layout_width="match_parent"
@@ -100,7 +100,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="#3C8DC4"
         android:text="回复"
         android:textColor="#ffffff"/>
