--- a/src-android/MailIM/app/src/main/res/layout/activity_login.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#E6E6E6"
     android:layout_width="match_parent"
@@ -10,8 +11,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/ic"/>
     <LinearLayout
         android:id="@+id/login_linlay1"
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
         <RelativeLayout
             android:id="@+id/login_rl_username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_margin="15dp">
             <TextView
                 android:id="@+id/login_tv_name"
@@ -31,12 +32,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dp"
-                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:text="账户："/>
             <EditText
                 android:id="@+id/login_et_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@+id/login_tv_name"
                 android:inputType="textEmailAddress"
@@ -49,7 +51,7 @@
         <RelativeLayout
             android:id="@+id/login_rl_userpsw"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_margin="15dp">
             <TextView
                 android:id="@+id/login_tv_psw"
@@ -57,28 +59,67 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dp"
-                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:text="密码："/>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/login_tv_psw"
+                app:passwordToggleEnabled="true">
             <EditText
                 android:id="@+id/login_et_userpsw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/login_tv_psw"
-                android:inputType="textPassword"
-                android:background="@null"/>
+                android:background="@null"
+                android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
     </LinearLayout>
-    <Button
-        android:id="@+id/login_btn_login"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_linlay1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        android:background="#3C8DC4"
-        android:text="登录"
-        android:textColor="#ffffff"/>
+        android:layout_margin="20dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/login_save_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_gravity="center"
+                android:text="保存密码"/>
+            <CheckBox
+                android:id="@+id/login_auto_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_gravity="center"
+                android:text="自动登陆"/>
+        </LinearLayout>
+        <Button
+            android:id="@+id/login_btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login_register"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="#3C8DC4"
+            android:text="登录"
+            android:textColor="#ffffff"/>
+        <TextView
+            android:id="@+id/login_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="right"
+            android:clickable="true"
+            android:textColor="#00d"
+            android:textSize="20dp"
+            android:text="还没注册？点击注册"/>
+    </LinearLayout>
 </RelativeLayout>
