--- a/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/left"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
@@ -25,7 +26,7 @@
             android:layout_toEndOf="@+id/img_chat_left"
             android:layout_toRightOf="@+id/img_chat_left"
             android:background="@color/text_bg"
-            android:textSize="24dp"
+            android:textSize="28dp"
             android:text="" />
 
 
@@ -33,7 +34,7 @@
 
     <RelativeLayout
         android:id="@+id/right"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
@@ -49,7 +50,7 @@
             android:layout_toStartOf="@+id/img_chat_right"
             android:layout_toLeftOf="@+id/img_chat_right"
             android:background="@color/text_bg"
-            android:textSize="24dp"
+            android:textSize="28dp"
             android:text="" />
 
         <ImageView
@@ -61,4 +62,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
