--- a/src-android/MailIM/app/src/main/res/values/styles.xml
+++ b/src-android/MailIM/app/src/main/res/values/styles.xml
@@ -49,8 +49,8 @@
 
     <!-- 头像样式 -->
     <style name="image_head">
-        <item name="android:layout_width">60dp</item>
-        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_centerInParent">true</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
@@ -61,7 +61,6 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/option_bg</item>
-        <item name="android:gravity">center_vertical</item>
         <item name="android:clickable">true</item>
     </style>
 
@@ -85,8 +84,60 @@
     <style name="option_text">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_centerVertical">true</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
+
+    <style name="edit_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">3dp</item>
+        <item name="android:background">#E6E6E6</item>
+    </style>
+
+    <style name="myinfo_tv">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
+
+    <style name="myinfo_et">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_marginLeft">120dp</item>
+    </style>
+
+    <style name="userinfo_tv1">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
+
+    <style name="userinfo_tv2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_marginLeft">120dp</item>
     </style>
 
 </resources>
