--- a/src-android/MailIM/app/src/main/res/xml/pref_notification.xml
+++ b/src-android/MailIM/app/src/main/res/xml/pref_notification.xml
@@ -14,7 +14,7 @@
         android:defaultValue="content://settings/system/notification_sound"
         android:dependency="notifications_new_message"
         android:key="notifications_new_message_ringtone"
-        android:ringtoneType="alarm"
+        android:ringtoneType="notification"
         android:title="@string/pref_title_ringtone" />
 
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
