--- a/src-android/MailIM/app/src/main/res/layout/fragment_email.xml
+++ b/src-android/MailIM/app/src/main/res/layout/fragment_email.xml
@@ -5,10 +5,30 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_bg">
 
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:divider="#888"-->
+        <!--android:orientation="horizontal">-->
+        <!--<TextView-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textSize="24sp"-->
+            <!--android:textAlignment="center"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="0.5"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:text="常规"/>-->
+        <!--<TextView-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textSize="24sp"-->
+            <!--android:textAlignment="center"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="0.5"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:text="专用"/>-->
+    <!--</LinearLayout>-->
     <ListView
         android:id="@+id/lv_email"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
