--- a/src-android/MailIM/app/src/main/res/layout/activity_register.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#E6E6E6"
     android:layout_width="match_parent"
@@ -42,7 +43,8 @@
         <EditText
             android:id="@+id/register_et_email"
             style="@style/edit_text"
-            android:hint="邮箱"/>
+            android:hint="邮箱"
+            tools:ignore="TextFields" />
         <View style="@style/line"/>
         <EditText
             android:id="@+id/register_et_emailpsw"
@@ -51,10 +53,11 @@
             android:hint="邮箱密码"/>
         <View style="@style/line"/>
     </LinearLayout>
+
     <View
         android:id="@+id/register_null"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></View>
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,7 +80,7 @@
             android:layout_gravity="right"
             android:clickable="true"
             android:textColor="#00d"
-            android:textSize="20dp"
-            android:text="已经注册？返回登录"/>
+            android:text="已经注册？返回登录"
+            android:focusable="true" />
     </LinearLayout>
 </RelativeLayout>
