--- a/src-android/MailIM/app/src/main/res/drawable/text_bg.xml
+++ b/src-android/MailIM/app/src/main/res/drawable/text_bg.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:radius="12dp"/>
+        android:radius="6dp"/>
+    <padding
+        android:bottom="5dp"
+        android:left="8dp"
+        android:right="8dp"
+        android:top="5dp"/>
     <gradient
         android:startColor="@color/text_bg"
         android:endColor="@color/text_bg"/>
