--- a/src-android/MailIM/app/src/main/res/layout/activity_chat.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_chat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,29 +21,35 @@
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-    `
-        <Button
-            android:id="@+id/btn_left"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="5dp"
-            android:text=""
-            android:background="@mipmap/pictrue"
-            android:textColor="#fff" />
 
-        <EditText
-            android:id="@+id/et_meg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+    <!--<Button-->
+        <!--android:id="@+id/btn_left"-->
+        <!--android:layout_width="64dp"-->
+        <!--android:layout_height="36dp"-->
+        <!--android:text=""-->
+        <!--android:background="@mipmap/pictrue" />-->
+    <!--<Button-->
+        <!--android:id="@+id/btn_left"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:text="发送图片"-->
+        <!--android:background="@drawable/send_bg"-->
+        <!--android:textColor="#fff" />-->
 
-        <Button
-            android:id="@+id/btn_right"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:text="@string/send"
-            android:textColor="#fff" />
+    <EditText
+        android:id="@+id/et_meg"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
+    <Button
+        android:id="@+id/btn_right"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:text="图片"
+        android:background="@drawable/send_bg"
+        android:textColor="#fff" />
     </LinearLayout>
 </RelativeLayout>
