--- a/src-android/MailIM/app/src/main/res/layout/activity_login.xml
+++ b/src-android/MailIM/app/src/main/res/layout/activity_login.xml
@@ -30,8 +30,8 @@
                 android:id="@+id/login_tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
                 android:layout_centerVertical="true"
                 android:text="账户："/>
             <EditText
@@ -39,8 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/login_tv_name"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/login_tv_name"
                 android:inputType="textEmailAddress"
                 android:background="@null"/>
         </RelativeLayout>
@@ -57,8 +57,8 @@
                 android:id="@+id/login_tv_psw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
                 android:layout_centerVertical="true"
                 android:text="密码："/>
             <android.support.design.widget.TextInputLayout
@@ -105,8 +105,6 @@
             android:id="@+id/login_btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/login_register"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="#3C8DC4"
             android:text="登录"
@@ -119,7 +117,7 @@
             android:layout_gravity="right"
             android:clickable="true"
             android:textColor="#00d"
-            android:textSize="20dp"
-            android:text="还没注册？点击注册"/>
+            android:text="还没注册？点击注册"
+            android:focusable="true" />
     </LinearLayout>
 </RelativeLayout>
