--- a/src-android/MailIM/app/src/main/res/layout/fragment_message.xml
+++ b/src-android/MailIM/app/src/main/res/layout/fragment_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,13 +20,14 @@
         android:padding="10dp"
         android:background="#6d6"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:text="无法连接到服务器！">
 
     </TextView>
     <ListView
         android:id="@+id/lv_message"
         android:layout_below="@+id/tip_net"
-        style="@style/lv_fragment">
+        style="@style/lv_fragment"
+        tools:ignore="ObsoleteLayoutParam">
     </ListView>
 </LinearLayout>
