--- a/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_chat.xml
@@ -10,7 +10,6 @@
     <TextView
         android:id="@+id/time"
         android:text="2017-11-24 13:11"
-        android:textSize="11sp"
         android:textColor="#777"
         android:background="@drawable/time_bg"
         android:layout_marginBottom="5dp"
@@ -21,7 +20,7 @@
         android:id="@+id/left"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp"
         android:orientation="horizontal">
 
         <mailim.mailim.view.CircleImageView
@@ -33,25 +32,22 @@
             android:id="@+id/text_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_alignTop="@+id/img_chat_left"
             android:layout_toEndOf="@+id/img_chat_left"
-            android:layout_toRightOf="@+id/img_chat_left"
             android:background="@drawable/text_bg"
-            android:textSize="28sp"
+            android:textSize="18sp"
             android:text="" />
 
         <ImageView
             android:id="@+id/image_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_alignTop="@+id/img_chat_left"
             android:layout_toEndOf="@+id/img_chat_left"
-            android:layout_toRightOf="@+id/img_chat_left"
             android:background="@color/text_bg"
             android:textSize="28sp"
-            android:clickable="true"
             android:visibility="gone"
             android:text="" />
 
@@ -61,13 +57,12 @@
         android:id="@+id/right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/img_chat_right"
             android:layout_alignTop="@+id/img_chat_right"
             android:layout_toStartOf="@+id/img_chat_right">
 
@@ -84,28 +79,29 @@
             android:id="@+id/text_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:background="@drawable/text_bg"
-            android:textSize="28sp"
+            android:textSize="18sp"
             android:text="" />
 
         <ImageView
             android:id="@+id/image_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:background="@color/text_bg"
             android:textSize="28sp"
             android:clickable="true"
             android:visibility="gone"
-            android:text="" />
+            android:text=""
+            android:focusable="true" />
         </LinearLayout>
 
         <mailim.mailim.view.CircleImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/img_chat_right"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentEnd="true"/>
 
     </RelativeLayout>
 
