--- a/src-android/MailIM/app/src/main/res/layout/list_item_matey.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_matey.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:orientation="horizontal">
     <ImageView
         android:id="@+id/list_item_matey_image"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"/>
-    <TextView
-        android:id="@+id/tv_list_matey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/list_item_matey_image"
-        android:layout_toLeftOf="@+id/tv_list_matey_online"
-        android:paddingLeft="5dp"
-        android:layout_marginLeft="20dp"
-        android:textSize="28dp"
-        android:hint="item布局"/>
+        android:layout_width="48dp"
+        android:layout_height="48dp" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_list_matey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:singleLine="true"
+            android:hint="item布局"/>
+        <TextView
+            android:id="@+id/tv_list_matey_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:hint="323223233332@qq.com"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/tv_list_matey_online"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:text="离线"
         />
-</RelativeLayout>
+</LinearLayout>
