--- a/src-android/MailIM/app/src/main/res/layout/list_item_message.xml
+++ b/src-android/MailIM/app/src/main/res/layout/list_item_message.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:orientation="horizontal">
     <ImageView
         android:id="@+id/list_item_message_image"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"/>
-    <RelativeLayout
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/list_item_message_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="48dp"
+        android:layout_height="48dp"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_list_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:singleLine="true"
+            android:hint="item布局"/>
+        <TextView
+            android:id="@+id/tv_list_message_last"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:hint="内容"/>
+    </LinearLayout>
     <TextView
-        android:id="@+id/tv_list_message"
+        android:id="@+id/tv_list_message_time"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:paddingLeft="5dp"
-        android:layout_marginLeft="5dp"
-        android:textSize="30sp"
-        android:hint="item布局"/>
-    <TextView
-        android:id="@+id/tv_list_message_last"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_list_message"
-        android:layout_alignParentLeft="true"
-        android:paddingLeft="5dp"
-        android:layout_marginLeft="5dp"
-        android:textSize="15sp"
-        android:textColor="@color/text_gray"
-        android:hint="内容"/>
-    </RelativeLayout>
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:text="时间"/>
+</LinearLayout>
