--- a/src-android/MailIM/app/src/main/res/values/colors.xml
+++ b/src-android/MailIM/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="option_pressed">#aaaaaa</color>
     <color name="title">#222222</color>
     <color name="title_text">#dddddd</color>
-    <color name="text_bg">#939aff</color>
+    <color name="text_bg">#938adf</color>
+    <color name="send_bg_select">#738adf</color>
+    <color name="send_bg_un_select">#999999</color>
 </resources>
